Dynamic columns in Datatable

--- a/src/main/resources/templates/fragments/admin/sidebar.html
+++ b/src/main/resources/templates/fragments/admin/sidebar.html
@@ -88,7 +88,7 @@
           </ul>
         </li>
         <li class="sidebar-item"> <a class="sidebar-link has-arrow" href="javascript:void(0)"
-                                     aria-expanded="false"><i data-feather="file-text" class="feather-icon"></i><span
+                                     aria-expanded="false"><i data-feather="file-plus" class="feather-icon"></i><span
                 class="hide-menu">Tasks </span></a>
           <ul aria-expanded="false" class="collapse  first-level base-level-line">
 
